mobile layout done

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
             color:  white;
             background: #333;
         }
+
+        @media screen and (max-width: 844px) {
+            .main-container{
+                flex-direction: column;
+            }
+            .box-1>img{
+                margin-left: 50px;
+                margin-top: 25px;
+            }
+            .box-title{
+                font-size: 48px;
+            }
+            .story{
+                font-size: 18px;
+                margin-bottom: 60px ;
+            }
+            .box-2{
+                margin-left: 5%;
+            }
+        }
     </style>
 </head>
 <body>
