--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <main>
         <div class="main-container">
             <div class="box-1">
-                <img src="/Scarecrow.png" alt="Picture">
+                <img src="./Scarecrow.png" alt="Picture">
             </div>
             <div class="box-2">
                 <h2 class="box-title">I have bad news for you</h2>
